added addition memory options for surefire plugin