@@ -46,6 +46,7 @@
         <javadoc-plugin-version>2.8</javadoc-plugin-version>
         <release-plugin-version>2.1</release-plugin-version>
         <resources-plugin-version>2.4.3</resources-plugin-version>
+        <surefire-plugin-version>2.7.1</surefire-plugin-version>
         
         <!-- Dependency version properties -->
         <activemq-version>5.5.0</activemq-version>
@@ -905,6 +906,11 @@
                         </dependency>
                     </dependencies>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${surefire-plugin-version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -917,6 +923,9 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xms64m -Xmx512m -XX:MaxPermSize=256m</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
